Fix problem with img size in slider when modal is displayed on small window.

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -167,7 +167,7 @@ a.t-trigger {
 }
 
 .t-menu.out {
-    right: -83px;
+    right: -82px;
 }
 
 div.menu-shadow {
@@ -190,15 +190,13 @@ div.menu-shadow {
     padding-left: 5px;
     z-index: 1;
     padding-right: 10px;
-    // border-right: 1px solid #d2d2d2;
     border-radius: 0px 3px 3px 0px;
     font-size: 13px;
     text-align: right;
-    transition: border-radius 0.3s, border 0.3s;
+    transition: border-radius 0.3s;
 }
 
 .t-added.out {
-    // border-right: 1px solid #a7a7a7;
     border-radius: 0px;
 }
 
@@ -303,6 +301,7 @@ div.t-name {
 
     img {
         border-radius: 3px;
+        width: 203px;
     }
 
     .spinner {
